--- a/ros_arduino_python/config/my_arduino_params.yaml
+++ b/ros_arduino_python/config/my_arduino_params.yaml
@@ -10,22 +10,22 @@ timeout: 0.1
 rate: 50
 sensorstate_rate: 10
 
-use_base_controller: True
+use_base_controller: True #启用基座控制器
 base_controller_rate: 10
 
 # For a robot that uses base_footprint, change base_frame to base_footprint
-base_frame: base_link
+base_frame: base_footprint #base_frame 设置
 
 # === Robot drivetrain parameters
 wheel_diameter: 0.065    # 轮胎直径
-wheel_track: 0.2969      # 两个轮胎间距
-encoder_resolution: 2    # from Pololu for 131:1 motors
-gear_reduction: 1.0
-motors_reversed: True
+wheel_track: 0.21        # 两个轮胎间距
+encoder_resolution: 3120 # 编码器精度(一圈的脉冲数 * 倍频 * 减速比)
+#gear_reduction: 1.0      # 减速比
+#motors_reversed: True    # 转向取反
 
-# === PID parameters
-Kp: 10
-Kd: 12
+# === PID parameters PID参数，需要自己调节
+Kp: 5
+Kd: 45
 Ki: 0
 Ko: 50
 accel_limit: 1.0
