--- a/ros_arduino_python/config/arduino_params.yaml
+++ b/ros_arduino_python/config/arduino_params.yaml
@@ -14,12 +14,12 @@ use_base_controller: False
 base_controller_rate: 10
 
 # For a robot that uses base_footprint, change base_frame to base_footprint
-base_frame: base_link
+base_frame: base_footprint
 
 # === Robot drivetrain parameters
-#wheel_diameter: 0.146
-#wheel_track: 0.2969
-#encoder_resolution: 8384 # from Pololu for 131:1 motors
+wheel_diameter: 0.146
+wheel_track: 0.2969
+encoder_resolution: 8384 # from Pololu for 131:1 motors
 #gear_reduction: 1.0
 #motors_reversed: True
 
