--- a/ros_arduino_python/config/arduino_25ga370_12v620rpm_params.yaml
+++ b/ros_arduino_python/config/arduino_25ga370_12v620rpm_params.yaml
@@ -1,7 +1,4 @@
-# For a direct USB cable connection, the port name is typically
-# /dev/ttyACM# where is # is a number such as 0, 1, 2, etc
-# For a wireless connection like XBee, the port is typically
-# /dev/ttyUSB# where # is a number such as 0, 1, 2, etc.
+# arduino + 25ga370电机参数配置(12v 空转620rpm/分钟)
 
 port: /dev/ttyACM0
 baud: 57600
@@ -18,12 +15,12 @@ base_frame: base_footprint #base_frame 设置
 
 # === 传动系统参数 Robot drivetrain parameters
 wheel_diameter: 0.146    # 轮胎直径
-wheel_track: 0.29        # 两个轮胎间距
+wheel_track: 0.2969        # 两个轮胎间距
 encoder_resolution: 8384 # 编码器精度(一圈的脉冲数 * 倍频 * 减速比)
 #gear_reduction: 1.0      # 减速比
 #motors_reversed: True    # 转向取反
 
-# === PID parameters PID参数，需要自己调节
+# === PID parameters PID参数，控制轮速，修改到车子能够根据命令走直线且速度稳定
 Kp: 10
 Kd: 12
 Ki: 0
