--- a/ros_arduino_python/config/arduino_params.yaml
+++ b/ros_arduino_python/config/arduino_params.yaml
@@ -1,7 +1,4 @@
-# For a direct USB cable connection, the port name is typically
-# /dev/ttyACM# where is # is a number such as 0, 1, 2, etc
-# For a wireless connection like XBee, the port is typically
-# /dev/ttyUSB# where # is a number such as 0, 1, 2, etc.
+# default arduino + motors config
 
 port: /dev/ttyACM0
 baud: 57600
