--- a/ros_arduino_python/config/arduino_params.yaml
+++ b/ros_arduino_python/config/arduino_params.yaml
@@ -7,7 +7,7 @@ timeout: 0.1
 rate: 50  # 轮询速率50hz
 sensorstate_rate: 10
 
-use_base_controller: False
+use_base_controller: True
 base_controller_rate: 10
 
 # For a robot that uses base_footprint, change base_frame to base_footprint
@@ -17,15 +17,15 @@ base_frame: base_footprint
 wheel_diameter: 0.146
 wheel_track: 0.2969
 encoder_resolution: 8384 # from Pololu for 131:1 motors
-#gear_reduction: 1.0
+gear_reduction: 1.0
 #motors_reversed: True
 
 # === PID parameters
-#Kp: 10
-#Kd: 12
-#Ki: 0
-#Ko: 50
-#accel_limit: 1.0
+Kp: 10
+Kd: 12
+Ki: 0
+Ko: 50
+accel_limit: 1.0
 
 # === Sensor definitions.  Examples only - edit for your robot.
 #     Sensor type can be one of the follow (case sensitive!):
