--- a/ros_arduino_python/config/my_arduino_params.yaml
+++ b/ros_arduino_python/config/my_arduino_params.yaml
@@ -21,9 +21,9 @@ gear_reduction: 9.6      # 减速比(马达参数表)
 #motors_reversed: True    # 转向取反
 
 # === PID parameters 马达PID参数，控制轮速，修改到车子能够根据命令走直线且速度稳定
-Kp: 4 #0.25
-Kd: 2 #0
-Ki: 2 #0.15
+Kp: 4 #0.25   # 提高响应速度，调大后惯性过大，容易导致超过目标值后的震荡回调
+Kd: 2 #0      # 过大会导致超调震荡而难以收敛
+Ki: 2 #0.15   # 调节控制误差，调大会导致趋于稳定的时间变长，调小会导致超调量过大而回调震荡幅度过大
 Ko: 50
 accel_limit: 1.0
 
