--- a/ros_arduino_python/config/my_arduino_params.yaml
+++ b/ros_arduino_python/config/my_arduino_params.yaml
@@ -44,5 +44,5 @@ sensors: {
   #motor_current_right:  {pin: 1, type: PololuMotorCurrent, rate: 5},
   #ir_front_center:      {pin: 2, type: GP2D12, rate: 10},
   #sonar_front_center:   {pin: 5, type: Ping, rate: 10},
-  arduino_led:          {pin: 13, type: Digital, rate: 5, direction: output}
+  #arduino_led:          {pin: 13, type: Digital, rate: 5, direction: output}
 }
