--- a/ros_arduino_python/config/my_arduino_params.yaml
+++ b/ros_arduino_python/config/my_arduino_params.yaml
@@ -14,7 +14,7 @@ base_controller_rate: 10
 base_frame: base_footprint #base_frame 设置
 
 # === 马达参数 Robot drivetrain parameters
-wheel_diameter: 0.05     # 轮胎直径(米)
+wheel_diameter: 0.3     # 轮胎直径(米) 这个经过线速度标定测试不能按实际的来，按约5倍配置
 wheel_track: 0.11        # 两个轮胎间距(米)
 encoder_resolution: 11    # 编码器精度(编码器参数表：25ga370配置的编码器为电机一圈11个脉冲)
 gear_reduction: 9.6       # 减速比(马达参数表：25ga370 12v+620rpm减速比为9.6)
