--- a/ros_arduino_python/config/my_arduino_params.yaml
+++ b/ros_arduino_python/config/my_arduino_params.yaml
@@ -18,8 +18,9 @@ base_frame: base_footprint #base_frame 设置
 wheel_diameter: 0.067 #0.067     # 轮胎直径(米) 这个经过线速度标定测试不能按实际的来，按约1/2配置
 wheel_track: 0.226 #0.11        # 两个轮胎间距(米)
 encoder_resolution: 38.5    # 编码器精度(编码器参数表：手动推车移动1米，用1米的电机编码器值*(self.wheel_diameter * pi)/self.gear_reduction可以计算出此编码器精度)
-gear_reduction: 30       # 减速比(马达参数表：jgb37-520 12v 空转330rpm 减速比20)
-#motors_reversed: True    # 转向取反
+gear_reduction: 30          # 减速比(马达参数表：jgb37-520 12v 空转330rpm 减速比20)
+#motors_reversed: True      # 转向取反
+diamete_ratio: 1.089932037  # yanjingang:左轮相对于右轮轮径比系数,往左偏,调小,往右偏调大
 
 # === PID parameters 马达PID参数，控制轮速，修改到车子能够根据命令走直线且速度稳定
 Kp: 20 #3 #0.25   # 提高响应速度，调大后惯性过大，容易导致超过目标值后的震荡回调（通常先把其他参数置0，将Kp参数由小向大调，以能达到最快响应又无无大超调为最佳参数。）
