--- a/ros_arduino_python/config/my_arduino_params.yaml
+++ b/ros_arduino_python/config/my_arduino_params.yaml
@@ -23,9 +23,9 @@ gear_reduction: 30             # 电机减速比(马达参数表：jgb37-520 12v
 turn_reduction: 63.0           # 转向减速比（使转向速度降低，确保angular.z=1持续5s时旋转<40度，需要反复测量）
 
 # === PID parameters 马达PID参数，控制轮速，修改到车子能够根据命令走直线且速度稳定
-Kp: 20 #3 #0.25   # 提高响应速度，调大后惯性过大，容易导致超过目标值后的震荡回调（通常先把其他参数置0，将Kp参数由小向大调，以能达到最快响应又无无大超调为最佳参数。）
-Kd: 12 #0 #0      # 主要用于对Kp的未来走势进行预测，以避免Kp冲过头（通常为0.5*延迟时间，过大会导致超调震荡而难以收敛。通常在P、I调节好后，再调节D，一般的系统D=0,1或2即可，只有滞后较大的系统，D值才可能调大些）
-Ki: 0 #2 #0.2   # 根据历史曲线调节控制误差（调大会导致趋于稳定的时间变长，调小会导致超调量过大而回调震荡幅度过大。通常从大往小调整，调小的同时也要缩小Kp）
+Kp: 20 #3 #0.25   # 负责提高响应速度。调大后惯性过大，容易导致超过目标值后的震荡回调（通常先把其他参数置0，将Kp参数由小向大调，以能达到最快响应又无无大超调为最佳参数。）
+Kd: 12 #0 #0      # 负责减速。对Kp的未来走势进行预测后减速，以避免Kp冲过头（通常为0.5*延迟时间，过大会导致超调震荡而难以收敛）
+Ki: 0 #2 #0.2     # 负责细精度小误差的消除。当检测到与目标距离存在误差且一直未消除时，会不断积分累积变大，直到克服自重和摩擦力后轻微移动，完成误差消除（调大会导致趋于稳定的时间变长，调小会导致超调量过大而回调震荡幅度过大。通常从大往小调整，调小的同时也要缩小Kp）
 Ko: 50
 accel_limit: 1.0
 
